[package]
name = "http-server-superteam"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
# solana-sdk ="1.18.26"
# solana-client ="1.18.26"
bs58 = "0.5.1"
base64 = "0.22.1"
